--- a/library.bib
+++ b/library.bib
@@ -2176,3 +2176,12 @@ journal = {Youtube},
 title = {{Interacting with Objects in the Environment by Gaze and Hand Gestures}},
 year = {2013}
 }
+
+@inproceedings{middel19detection,
+  title={Detection and Identification Techniques for Markers Used in Computer Vision$\}$$\}$},
+  author={Middel, Ariane and Scheler, Inga and Hagen, Hans},
+  booktitle={Visualization of Large and Unstructured Data Sets-Applications in Geospatial Planning, Modeling and Engineering (IRTG 1131 Workshop)$\}$},
+  volume={19},
+  pages={36--44},
+  organization={Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik$\}$}
+}
