added several figures and text

--- a/library.bib
+++ b/library.bib
@@ -2178,10 +2178,39 @@ year = {2013}
 }
 
 @inproceedings{middel19detection,
-  title={Detection and Identification Techniques for Markers Used in Computer Vision$\}$$\}$},
+  title={Detection and Identification Techniques for Markers Used in Computer Vision},
   author={Middel, Ariane and Scheler, Inga and Hagen, Hans},
-  booktitle={Visualization of Large and Unstructured Data Sets-Applications in Geospatial Planning, Modeling and Engineering (IRTG 1131 Workshop)$\}$},
+  booktitle={Visualization of Large and Unstructured Data Sets-Applications in Geospatial 
+  Planning, Modeling and Engineering},
+  journal = {IRTG 1131 Workshop},
   volume={19},
   pages={36--44},
-  organization={Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik$\}$}
+  organization={Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik}
+}
+
+@inproceedings{mardanbegi2012eye,
+  title={Eye-based head gestures},
+  author={Mardanbegi, Diako and Hansen, Dan Witzner and Pederson, Thomas},
+  booktitle={Proceedings of the Symposium on Eye Tracking Research and Applications},
+  pages={139--146},
+  year={2012},
+  organization={ACM}
+}
+
+@inproceedings{mardanbegi2012parallax,
+  title={Parallax error in the monocular head-mounted eye trackers},
+  author={Mardanbegi, Diako and Hansen, Dan Witzner},
+  booktitle={Proceedings of the 2012 ACM Conference on Ubiquitous Computing},
+  pages={689--694},
+  year={2012},
+  organization={ACM}
+}
+
+@inproceedings{mardanbegi2012eye,
+  title={Eye-based head gestures},
+  author={Mardanbegi, Diako and Hansen, Dan Witzner and Pederson, Thomas},
+  booktitle={Proceedings of the Symposium on Eye Tracking Research and Applications},
+  pages={139--146},
+  year={2012},
+  organization={ACM}
 }
