--- a/document.tex
+++ b/document.tex
@@ -31,7 +31,7 @@ surrounding 3D environment. In this work, we combine gaze tracking and hand gest
 interact with objects in the environment by gazing at them, pointing part, and generating a hand gesture command,
 control part. We use low-cost hardware to build a set of gaze tracking glasses consisting of glasses frame, eye tracking
 camera and field of view camera. We also use a binary beacon recognition library to identify objects in the environment,
-a hand gesture classification algorithm to generate control commands and an open source gaze estimation algorithm to
+a hand gesture classification algorithm to recognize control commands and an open source gaze estimation algorithm to
 obtain the user's gaze coordinates. When combining all these elements, the emerging system permits a subject to move
 freely in an environment, positions his gaze in an object he want to interact with, and transmit a control command by
 performing a hand gesture. The specific object is identified by the binary beacon visible in its surface. This
@@ -66,30 +66,30 @@ Interacting with Objects in the Environment by Gaze and Hand Gestures
 % We should clearify that this paper does not contribute in the hand gesture recognition but it uses the gesture and
 % gaze in a mobile situation for controlling a robot.
 Body language and gaze are important forms of communication among humans. In this work we present a system that combines
-gaze pointing and hand gestures to interact with objects in the environment. Our system merges a video-based gaze 
-tracker, a hand gesture classifier and a visual marker recognition module into an innovate HCI device that permits novel 
-forms of interaction with the environment. Gaze is used as a pointing mechanism to select the object with which the 
-subject want to interact. A visual binary marker in the surface of the object is used for identification purposes by
-the system. Finally, a hand gesture is mapped to a specific control command that makes the object carry out a particular
-function.
+gaze pointing and hand gestures to interact with objects in the environment. Our system merges a video-based gaze
+tracker, a hand gesture classifier and a visual marker recognition module into an innovate HCI device that permits novel
+forms of interaction with electronic devices in the environment. Gaze is used as a pointing mechanism to select the
+object with which the subject wants to interact. A visual binary marker in the surface of the object is used for
+identification purposes by the system. Finally, a hand gesture is mapped to a specific control command that makes the
+object carry out a particular function.
 
 Eye tracking refers to the monitoring of eye movements. Gaze tracking is the process of measuring the point of gaze
-(where one is looking). A head mounted eye tracker is a device that permits measuring eye movement while the subject is
-moving around an environment. Eye trackers are used in research on the visual system, in psychology, in cognitive
-linguistics and in product design. There are a number of methods for measuring eye movement. The most popular variant
-uses video images from which the eye position is extracted. Other methods use search coils or are based on the
-electrooculogram.
+(where a person is looking). A head mounted eye tracker is a device that permits measuring eye movement while the
+subject is moving around an environment. Eye trackers are used in research on the visual system, in psychology, in
+cognitive linguistics, product design and in Human Computer Interaction (HCI) research \cite{myiwann2011}. There
+are a number of methods for measuring eye movement. The most popular variant uses video images from which the eye
+position is extracted. Other methods use search coils or are based on electrooculography.
 
 Automatic gesture recognition is a topic in computer science and language technology that strives to interpret human
 gestures via computational algorithms. Gestures can originate from any bodily motion or state but commonly originate
-from the face or hands. An appealing feature of gestural interfaces is that they make it possible for users to communicate
-with objects without need for external control devices. Hand gestures are an obvious choice as a mechanism to interact
-with objects in the environment.
+from the face or hands. An appealing feature of gestural interfaces is that they make it possible for users to
+communicate with objects without the need for external control devices. Hand gestures are an obvious choice as a mechanism
+to interact with objects in the environment \cite{Rozado2012b,myicann2010}.
 
 Automated hand gesture recognition is challenging since in order for such an approach to represent a serious alternative
 to conventional input devices applications based on computer vision should be able to work successfully under
 uncontrolled light conditions, no matter what kind of background the user stands in front of. In addition, deformable
-and articulated objects like hands represent additional difficulty both for segmentation and shape recognition
+and articulated objects like hands represent added difficulty both for segmentation and shape recognition
 purposes.
 
 Visual marker system consists of a set of patterns that can be detected by a computer equipped
@@ -101,40 +101,52 @@ the ability to recognize specific objects in the environment.
 
 The hand gesture recognition module we develop here is able to detect a hand in front of the scene camera of the gaze
 tracking glasses and it is also able to detect the number of fingers that the hand is holding up. We define the gesture
-as holding the hand with a preset number of fingers hold up  for a predefined dwell time and moving it in a particular
-direction: up, down, left  or right. The hand gesture recognition worked well for natural skin color, but using a latex
-glove of a given color improves performance.
+as holding the hand with a preset number of fingers for a predefined dwell time and moving it in a particular direction:
+up, down, left  or right. The hand gesture recognition worked well for natural skin color, but using a latex glove of a
+given color improves performance.
 
 
-Haytham provides real-time gaze estimation in the user’s field of view or in the computer display by analyzing eye movement.
+We used an open source gaze tracker, described in \cite{Mardanbegi2011}, to monitor user's gaze. The gaze tracker is
+called Haytham and it provides real-time gaze estimation in the user’s field of view or in the computer display by analyzing
+eye movement.
  
-The system recognizes objects in the environment by detecting visual markers associated to them through the scene camera.
 
-To interact with an object in the environment, the user of the glasses needs to first look at the binary beacon that
-identifies the object and then perform the gesture. In this way, only that particular object in the environment 
-will react to the hand gesture.
+The system recognizes objects in the environment by detecting visual markers associated to them through the scene camera
+also refered to here as field of view camera. When the subject carrying the glasses gazes at an object, the visual
+marker placed nearby is recognized by the visual marker recognition library and this opens a temporal window for that
+object to react to hand gestures coming from the user.
 
 
-In Summary, this work represents a proof of concept for an innovative form of interacting with objects in the environment
-through gaze and hand gestures. The off-the-shelf components used to build the hardware, the low cost of building the
-entire system and the open source nature of the algorithms used, make this form of interaction amenable for spreading
-among academic institutions and research labs to further investigate and stretch the possibilities of the innovative
-HCI paradigm.
+To interact with an object in the environment, the user of the glasses needs to first look at the binary visual marker
+associated to the object that identifies the object and then perform the hand gesture. In this way, only that particular
+object in the environment will react to the hand gesture.
+
+
+In Summary, this work represents a proof of concept for an innovative form of interacting with objects in the
+environment by combining gaze and hand gestures. Interaction is achieved by gazing at an object in the environment and
+carrying out a hand gesture. The hand gesture specifies a certain command and gazing at the object, and the visual
+marker associated to it, make only that object to respond to the subsequent hand gesture. The off-the-shelf components
+used to build the hardware, the low cost of building the entire system and the open source nature of the algorithms
+used, make this form of interaction amenable for spreading among academic institutions and research labs to further
+investigate and stretch the possibilities of the innovative HCI paradigm.
 
 \subsection{Related Work}
-
+%Diako! My subsections are only a suggestion. you know better than me how to properly organize this section :)
 %Related work on mobile gaze-based interaction, and hand gesture interaction with robot
 \subsection{Head mounted eye trackers}
 \subsection{Gaze for Interaction}
 \subsection{Gestures in HCI}
+Please cite \cite{Rozado2012a}, \cite{mardanbegi2012eye} and \cite{Rozado2012} 
+
 \subsection{Combining gaze and gesture}
 %methods and limitations
-\subsubsection{Gesture for Interaction}
+\subsection{Gesture for Interaction}
 %
-\subsubsection{Gaze enhanced interaction }
+\subsection{Gaze enhanced interaction }
 %Pehaps different methods or modes that has been studied in our case
 
 \section{Method}
+%Jeremy! My subsections are only a suggestion. you know better than me how to properly organize this section :)
 
 \subsection{Gaze Tracking}
 Eyes are used by humans to obtain information about the surroundings and to communicate information. When something
@@ -150,15 +162,15 @@ obtained from the eye by one or more cameras. Most systems employ infrared illum
 eye and hence it is not distracting for the user. Infrared light improves image contrast and produces a reflection on
 the cornea, known as corneal reflection or glint. Eye features such as the corneal reflections and the center of the
 pupil/iris can be used to estimate the PoR. Figure \ref{screenGazeTracker} shows a screenshot of an eye being tracked by
-the open-source ITU Gaze Tracker \cite{lowcostitugazetracker,Rozado2012}. In this case, the center of the pupil and two
+the open-source Haytham Gaze Tracker \cite{mardanbegi2012eye}. In this case, the center of the pupil and two
 corneal reflections are the features being tracked.
 
 %How to insert a figure (image):
 \begin{figure}[tp]
  \fitbitmap{figures/screenGazeTracker.jpg}
- \caption{\textbf{The Open Source ITU Gaze Tracker Tracking One Eye.} The
-features tracked in the image are the pupil center and two corneal reflections. These features are used by the gaze 
-estimation algorithms to determinine the PoR of the user on the screen.}
+ \caption{\textbf{The Open Source Haytham Gaze Tracker Tracking the Eye.} The
+features tracked in the image are the pupil center and two corneal reflections. These features are 
+used by the gaze estimation algorithms to determine the PoR of the user on the screen.}
  % the label is used to put refrences to this figure in the text
  \label{screenGazeTracker}
 \end{figure}
@@ -184,6 +196,26 @@ Copenhagen for mobile gaze estimation and extended it with a hand gesture recogn
 interaction with objects in the environment through gaze and hand gestures.
 
 \subsection{Constructing the eye tracking glasses}
+
+Figure \ref{gazeTrackingGlasses}
+
+\begin{figure}[tp]
+ \fitbitmap{figures/gazeTrackingGlasses.jpg}
+ \caption{\textbf{Low Cost Gaze Tracking Glasses.} Bla bla.}
+ % the label is used to put refrences to this figure in the text
+ \label{gazeTrackingGlasses}
+\end{figure}
+
+
+Figure \ref{jeremy}
+
+\begin{figure}[tp]
+ \fitbitmap{figures/jeremy.jpg}
+ \caption{\textbf{Low Cost Gaze Tracking Glasses On a Subject.} Bla bla.}
+ % the label is used to put refrences to this figure in the text
+ \label{gazeTrackingGlasses}
+\end{figure}
+
 
 Materials:
 Plastic safety glasses
@@ -211,38 +243,110 @@ are not unevenly balanced.
 It was found that the best position of the eye is below the glasses so it doesn't obstruct the user's vision. 
 8. The scene camera was mounted to the right of side of the glasses using sticky tape.
 
-
-
 % ---------------------------------------------------------------
 \subsection{Gaze Tracking Glasses}
 %Maybe Diako should take care of this subsection
 
 \subsection{Visual Markers Recognition}
+
+This is a test Figure \ref{visualMarker}
+
+\begin{figure}[tp]
+ \fitbitmap{figures/visualMarker.jpg}
+ \caption{\textbf{Visual Marker Recognition.} Bla bla bla.}
+ % the label is used to put refrences to this figure in the text
+ \label{visualMarker}
+\end{figure}
+
+
 \subsection{Hand Gesture Recognition}
+
+Figure \ref{hand}
+
+\begin{figure}[tp]
+ \fitbitmap{figures/hand.jpg}
+ \caption{\textbf{Hand Pose Recognition Through Scene Camera.} Bla bla.}
+ % the label is used to put refrences to this figure in the text
+ \label{hand}
+\end{figure}
+
 \subsection{Putting it all together}
+Figure \ref{systemDiagram}
+
+\begin{figure}[tp]
+ \fitbitmap{figures/systemDiagram.jpg}
+ \caption{\textbf{System Diagram.} Bla bla.}
+ % the label is used to put refrences to this figure in the text
+ \label{systemDiagram}
+\end{figure}
 
 
 \section{Application}
-Point to demo video: \url{http://www.youtube.com/watch?v=tBOfvZboGfk}
+We carried out a small pilot study to test the functionality and performance of the system. We decided to test the
+system in a environment where 3 ``smart'' objects could be controlled by the system: a computer, a set of leds in a
+bread board and a robot. The hand gesture recognition module could recognize 5 different states of the hands as defined
+by the number of fingers being held up: 1, 2, 3, 4 and 5. A gesture was defined as one of these 5 states plus one of
+four spatial directions: up, down, left and right.
+
+The infrared leds could just be turned on and off. Two fingers being held up and an upward movement would turn on the
+leds. 4 fingers being hold up and a movement to the right would turn them off.
+
+The same hand gestures were used to control the computer. The gestures were mapped to minimizing the current window on
+display in the computer GUI and to bring them back up. This was done just as a proof of concept, any other type of
+gestures associated to different commands could be envisioned and implemented.
+
+The robotic control was the most elaborated one. The robot could be made to move forward, backward, right and left. The
+numbers of fingers being held up indicated, either the speed for forward and backward movements or the amount of turn to
+be made for right and left movements.
+
+The hand gestures could be done with bare hands, but we notice that in environments where the color of the walls could
+resemble the skin hue, hand gesture recognition performance would suffer. Using a glove with a distinctive color, not 
+present in the rest of the room enhanced hand recognition performance.
+
+This manuscript associated video \footnote{\url{http://www.youtube.com/watch?v=tBOfvZboGfk}} provides a good overview of
+the system at work and being used by two different users to interact with a computer, a breadboard with a set of light
+emitting diodes and with a robot.
 
 
-%---------------------------------------------------------------
-\section{Discussion}
+% ---------------------------------------------------------------
+\section{Discussion and Conclusion}
+In this work we have shown how to interact with objects in the environment through an innovative combination of gaze and
+hand gestures using a set of gaze tracking glasses. The method is easily extensible to multiple objects in the
+environment and a wide array of hand gestures.
 
-For demonstration purposes, in the associated video \cite{gazetrackinglassesandhandgesturerecognitionVideo}, the system
-presented here is used to interact with a computer, a breadboard with a set of light emitting diodes and with a robot
+The low-cost headmounted eye tracker used and the gaze estimation algorithms employed to not compensate for parallax
+error, i.e. the inability to differentiate between the working plane and the calibration plane
+\cite{mardanbegi2012parallax}. This face limited the interaction with objects at a distance and objects up close.
+Nonetheless, since the field of view camera used is relatively close to the eye being tracked, see Figure \ref{}, the
+parallax error was minimized. Furthermore, we notice that during the calibrations, using calibrations points situated at
+different distances (from 1 to 10 meters) would find a compromise between objects objects far away and objects up close
+and would generate good gaze estimation for all sort of distances. We noticed that gaze estimation accuracy was never an
+issue for our system. Only over time, if the glasses would move slightly from their position during calibration, due to
+sweat on the skin and the glasses sliding slightly on it, would gaze estimation degrade slightly.
 
 
-In this work we have shown how to interact with objects in the environment through an innovative combination of
-gaze and hand gestures. The method is easily extendable to multiple objects in the environment and a wide array of hand
-gestures. The low-cost headmounted eye tracker does not compensate for parallax error, inability to differentiate
-between the working plane and the calibration plane, and these can limit interaction with objects at a distance and
-objects up close. We have tested the system  for interacting with a computer,  a breadboard and a mobile robot.
-This work has demonstrated the feasibility of the approach as well as its usefulness.
+We did notice problems with the skin detection when the hand was position within the field of view of the scene camera
+when changing illumination conditions of the background over which the hand was visualized. More sophisticated
+algorithms could help to solve this issue.
 
 
--Problems with skin detection vs Gloves
--Problems through lack of visual feedback (audio feedback as a substitute)
+An important issue of the system was the fact that the user wearing the glasses did not have any sort of feedback in
+terms of where within the field of view of the scene camera the hand was place when it was about to initiate a hand
+gesture. This is due to the lack of a display on the glasses to provided visual feedback in terms of how the hand is
+positioned with respect to the field of view of the scene camera. We implemented an auditory feedback signal to indicate
+that the system had found the hand within the field of view of the scene camera and it was therefore ready to receive a
+gesture. We found it that this helped the user but still did not provide inmediate feedback to carry out small
+corrections of hand positioning for proper positioning within the field of view of the scene camera. This issue was due
+to the usage of an scene camera with a relatively narrow field of view. Using an scene camera with a wider field of view
+should prevent the need of feedback for proper hand positioning since the hand would always fall within the field of
+view of the scene camera as long as the arm was stretched in front of the user.
+
+
+Further work should strive to carry out a quantitative analysis of the performance of the system within a large user study.
+More shopisticated hand gestures can also be envisioned. Yet, care should be taken in order to not mentally overload the user.
+
+
+In summary, this work\ldots
 
 
 \bibliography{library}
