adding my bibtex library in addition to Diakos

--- a/document.tex
+++ b/document.tex
@@ -387,5 +387,5 @@ and complex hand gestures is therefore paramount to successfully use hand gestur
 
 \section{Discussion}
 %assumes that there is a biblio.bib file in the same directory
-\bibliography{biblio}
+\bibliography{biblio,library}
 \end{document}
